@@ -12,3 +12,5 @@ env:
   global:
   - secure: Kg4ZQvRHolP5lKs8HTwU7Tq8GoDFsL67HWwcpRSeIEJRxPiEo7Fz2OwsdRfXcG69Zl2PP6089HwAylrxoe4YiZUIFJPER4gJnkRz93Iq/K4QinBmtMzIDwIOds4y0pq0VFZJIQMNrgMtaIZFZyylYxfZbrSK25ynCGG/oFvaFGU=
   - secure: Lgb6SLbbSWBaHiBHsdrRbq3MgvMbu/5Iv1VCjDqLu4vw9wzBmFHryYy6kBCHwTWjopYu7h8lDrb2U45SZxWgHX9cL0ubn3z6HW5UzWIRcpRDQ1H5oEeKzlCrEiG9CxsELXame2yq5+46GLpLrUZyEA4aLXvXlhKx9ds2uxxpAlA=
+  - secure: h6fCtCVNtRRBs+dFspYg//M6q/bQT/8No/TkuXutqmJk0R84Zhuf/FGfCr8lrLFVqUmAWQqyEcJJcoC5lmIY1R0+WI8p7gSkM7Gkj8YwtLHH77s6h1nKcyxmAs/EBQw71El5NdPmWxXIDcGvfDytk5ms5AaRzXhIJAz82Bm9RWc=
+  - secure: Lryi4zAqD+hB7hyaWsSx4SUlXOrRXDtteELBkREyku1FSEDPPendGg7Z0Sdaiy22nKEsfL4MUgIrVh1VqAtvqznyWGTc2NDGZArOVFhMS5ErA9MG6kN1g2jQCezuZN9VzKIIiftawjM+VKMIfyqdf4PAvVL4KdH6p+6p1Hr3wpA=
